[project]
name = "zm04"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mirai385", email = "mirai1069@icloud.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.16.0",
]

[project.scripts]
zm04 = "zm04.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
